--- a/index.html
+++ b/index.html
@@ -5,38 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="assets/images/goku_ico.png" <title>Portfolio Bianca</title>
+    <link rel="icon" type="image/png" href="assets/images/lightning_thunderbolt_thunder_icon_185978.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- Menu da página-->
     <nav>
         <!-- Logo + texto à esquerda do menu-->
-        <div>
-            <img src="assets/images/goku_ico.png" alt="Logo da page - Goku">
-            <span>Portfolio</span>
-            <hr>
+        <div class="logo">
+            <img class=" icone" src="assets/images/woman_icon_224666.ico" alt="Logo da page - Bianca">
+            <span class="titulo">Portfolio da Bianquinha xD</span>
         </div>
 
         <!--Opções do menu utilizando marcadores-->
         <ul>
-            </p>
-            <a href = "index.html">
-            <li>Home</li>
-            </p>
+            <a href="index.html">
+                <li>Home</li>
             </a>
 
-            <p>
-            <a href="perfil.html">
-            <li>Sobre</li>
-            </p>
+                <a href="perfil.html">
+                    <li>Sobre</li>
             </a>
-            
-            <p>
-            <a href="#video">
-            <li>Vídeo</li>
-            </a>
-            </p>
+
+                <a href="#video">
+                    <li>Vídeo</li>
+                </a>
 
             <a href="contato.html">
                 <li>Contato</li>
@@ -46,43 +40,43 @@
 
     <!-- Conteúdo da página-->
     <main>
-        <h1 id=" perfil">Sobre o CJ:</h1>
-        <section>
+        <h1 id=" perfil">Sobre a Bianca:</h1>
+        <section id="sobre">
             <div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab ipsum ratione, expedita provident,
-                    exercitationem dolore perspiciatis ullam velit praesentium corrupti esse.
-                    Alias deleniti ipsum dicta maxime recusandae nostrum sed necessitatibus?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab ipsum ratione, expedita provident,
-                    exercitationem dolore perspiciatis ullam velit praesentium corrupti esse.
-                    Alias deleniti ipsum dicta maxime recusandae nostrum sed necessitatibus?</p>
+                <p>Em alguns anos empregada, consegui desenvolver skills focadas em dados e análise/prevenção de fraude. Possuo Excel avançado com experiência em automação de tarefas via VBA 
+                    (Virtual Basic for Applications), ferramentas de dados como SQL e Microsoft Power BI e também nas táticas mais atuais e utilizadas pelos fraudadores. </p>
+                <p>Mantenho o foco no cuidado com o cliente, na melhoria dos processos, proteção dos dados da empresa/clientes e das comunicações internas. Possuo inglês avançado, 
+                    aprendizagem rápida e facilidade de me adaptar com pressão, ambientes novos e curtos prazos.
+                    Atualmente estou em transição de carreira para desenvolvedora Java jr, realizando um bootcamp da Generation Brasil com duração de 12 semanas.</p>
             </div>
-            <img src="assets/images/cj.png" alt="aww' shit, here we go again.">
+            <img class="foto" src="assets/images/euzinha.jpg" alt="minha imagem">
         </section>
 
         <section>
-            <h1 id= "video">Vídeo</h1>
+            <h1 id="video">Vídeo</h1>
             <h2>Vídeo do momento:</h2>
-        <iframe width="853" height="480" src="https://www.youtube.com/embed/UBXdSfYlFEA"
-            title="Yo soy el Grando Smokio Definitive Edition" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/UBXdSfYlFEA"
+                title="Yo soy el Grando Smokio Definitive Edition" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
     </main>
 
     <!-- Rodapé da página-->
     <footer>
-        <div>
-            <p> <a href="https://www.linkedin.com/in/bianca-luna-88aaa7116/" target="_blank">
-                <img src="assets/images/linkedin.png" alt="LinkedIn">
-            </a>
+        <div class="redes">
+            <a href="https://www.linkedin.com/in/bianca-luna-88aaa7116/" target="_blank">
+                    <img src="assets/images/linkedin.png" alt="LinkedIn">
+                </a>
             <a href="https://github.com/r4inha" target="_blank">
-            <img src="assets/images/github.png" alt="GitHub">
-            </a>
+                    <img src="assets/images/github.png" alt="GitHub">
+                </a>
             <a href="https://www.instagram.com/r4inha_/" target="_blank">
-                <img src="assets/images/instagram.png" alt="Instagram">
-            </a> </p>
-
-    </div>
+                    <img src="assets/images/instagram.png" alt="Instagram">
+                </a>
+        </div>
         <p>Desenvolvido por Bianca Luna - 08/05/2023 &copy;</p>
     </footer>
+    <script src="./assets/js/scripts.js"></script>
 </body>
+
 </html>
